<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="#fff"
        android:id="@+id/clLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.LoginActivity">

    <ImageView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/etEmailLogin"
            android:src="@drawable/userphoto"
            android:layout_margin="8dp"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/ivUserLogin" />

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guidelineLogin"
            app:layout_constraintGuide_percent="0.5"
            android:orientation="horizontal"/>

    <TextView
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="@+id/etEmailLogin"
            app:layout_constraintStart_toStartOf="@+id/etEmailLogin"
            app:layout_constraintBottom_toTopOf="@+id/etEmailLogin"
            android:text="@string/invalid_email"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="12sp"
            android:visibility="gone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvMessageError"/>

    <EditText
            android:background="@drawable/custom_field_edittext"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:ems="10"
            android:id="@+id/etEmailLogin"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/guidelineLogin"/>
    <EditText
            android:background="@drawable/custom_field_edittext"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/senha"
            android:ems="10"
            android:id="@+id/etPasswordLogin"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guidelineLogin"/>
    <TextView
            android:id="@+id/tvRecoverPassword"
            app:layout_constraintStart_toStartOf="@id/etPasswordLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin"
            android:layout_marginTop="4dp"
            android:layout_marginStart="24dp"
            android:text="@string/recover_password"
            android:textColor="#000"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

    <Button
            android:text="@string/login"
            android:textColor="#fff"
            android:background="@drawable/custom_bg_button"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnLogin"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPasswordLogin"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBarLogin"
            app:layout_constraintEnd_toEndOf="@+id/btnLogin"
            app:layout_constraintStart_toStartOf="@+id/btnLogin"
            app:layout_constraintTop_toTopOf="@+id/btnLogin"
            app:layout_constraintBottom_toBottomOf="@+id/btnLogin"/>

    <TextView
            android:id="@+id/tvStymulusCreateAccount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin"
            android:text="@string/stymulus_to_create_account"
            android:textColor="#000"
            android:layout_marginTop="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <com.google.android.gms.common.SignInButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvRecoverPassword"
            android:layout_marginTop="16dp"
            android:id="@+id/btnGoogleLogin"/>


</androidx.constraintlayout.widget.ConstraintLayout>